# fleet-caliper

./: .gitignore  LICENSE  PAPER.md  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  simulate.py
examples/: demo.py  langgraph_research_agent.py
src/caliper/: __init__.py  alerts.py  attribution.py  baselines.py  budget.py  caliper.py  callbacks.py  exceptions.py  labels.py  loop_detection.py  pricing.py
tests/: test_attribution.py  test_baselines.py  test_budget.py  test_loop_detection.py
