[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caliper-ai"
version = "0.0.1"
description = "Cost-bounded autonomy for LLM agent fleets: runtime budget enforcement and loop detection for LangGraph/LangChain."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vasundra Srinivasan" }]
keywords = ["llm", "agents", "langgraph", "langchain", "cost", "governance", "autonomy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "langchain-core>=0.3.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0"]
langsmith = ["langsmith>=0.1.0"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/vasundras/caliper"
Issues = "https://github.com/vasundras/caliper/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/caliper"]

[tool.ruff]
line-length = 100
target-version = "py310"
