[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleet-caliper"
version = "0.1.0"
description = "Cost-bounded autonomy for LLM agent fleets: runtime budget enforcement and loop detection for LangGraph/LangChain."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vasundra Srinivasan" }]
keywords = ["llm", "agents", "langgraph", "langchain", "cost", "governance", "autonomy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The core (budgets, attribution, baselines, loop detection) is pure Python with
# no required dependencies. The LangChain/LangGraph integration is an extra.
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.3.0"]
langgraph = ["langchain-core>=0.3.0", "langgraph>=0.2.0"]
langsmith = ["langsmith>=0.1.0"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10", "langgraph>=0.2.0"]

[project.urls]
Homepage = "https://github.com/vasundras/fleet-caliper"
Issues = "https://github.com/vasundras/fleet-caliper/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/caliper"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
